# QtDigitalInstrumentCluster

./: .gitignore  CMakeLists.txt  DIC.desktop  DIC.pro  DIC.pro.user.693da20  MPH.qml  Mustang.qml  Navigation.qml  README.md  RPM.qml  instrumentcluster.cpp  instrumentcluster.h  main.cpp  main.qml  obdconnection.cpp  obdconnection.h  pids.cpp  pids.h  qml.qrc  serialgps.cpp  serialgps.h  serialobd.cpp  serialobd.cpp.Dj7016  serialobd.h
src/: CMakeLists.txt  instrumentcluster.h  main.cpp  serialgps.h  serialobd.cpp
src/qml/: DIC.qrc  Mustang.qml  RPM.qml  main.qml
translations/: DIC.ts
